...
"UNSAVED_TITLE" = "Unsaved location changes";
"UNSAVED_DESC" = "You have modified or assigned geographical location information to images that have not yet been saved.

You may save your changes, throw away your changes, or cancel program termination. What is your desire?";
"SAVE" = "Save";
"DONT_SAVE" = "Don't Save";
"CANCEL" = "Cancel";
"CLOSE" = "Close";
"WARN_TITLE" = "Some files not opened";
"WARN_DESC" = "One or more files were not opened. Unopened files were duplicates of files already opened for processing.";
"WARN_DESC_2" = "The following file could not be processed.

";
"NO_BACKUP_TITLE" = "Cannot make backups of image files";
...
